Fixed add-post and post functionality